--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/splashScreenTheme"
         tools:targetApi="31">
+        <activity
+            android:name=".onboardinglast"
+            android:exported="false"> </activity>
 
         <activity android:name=".mainscreen">
-        </activity>
 
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
